# WIZARDOS

./: .gitignore  LICENSE  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  test_wand_sensor.py
assets/placeholders/: README.md
audio/: sound_engine.py
camera/: camera_manager.py
config/: default_settings.json  settings.py
effects/: particle_engine.py
gesture/: custom_gestures.py  recognizer.py
renderer/: opengl_renderer.py
spellbook/: spell.py  spellbook_manager.py  spells.json
training/: training_manager.py
ui/: main_window.py  theme.py  widgets.py
utils/: actions.py  logging.py  paths.py  stats.py
vision/: coordinate_mapper.py  hand_tracker.py  wand_controller.py  wand_detector.py
