[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wizardos"
version = "2.0.0"
description = "WizardOS — AI Spell Recognition System powered by computer vision"
readme = "README.md"
requires-python = ">=3.12, <3.15"
license = { text = "MIT" }
keywords = ["computer-vision", "mediapipe", "spell-recognition", "hand-tracking", "qt"]
authors = [
    { name = "Arena Wizardry Lab" },
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video :: Capture",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "PySide6>=6.8.1",
    "opencv-python>=4.10.0,<6",
    "mediapipe>=0.10.35",
    "numpy>=2.0.0",
    "pygame>=2.6.1",
    "rich>=13.9.0",
    "pyinstaller>=6.11.0",
]

[project.urls]
Homepage = "https://github.com/ARENJKY369/WIZARDOS"
Repository = "https://github.com/ARENJKY369/WIZARDOS"

[project.scripts]
wizardos = "app:main"

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools.package-data]
"*" = ["*.json", "*.svg", "*.wav", "*.md", "*.txt", "*.yaml", "*.yml"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
warn_unused_ignores = false

[tool.ruff]
target-version = "py312"
line-length = 160
select = ["E", "F", "W"]
ignore = ["E501"]
